add 'delete single key' method, lttl bit refactor
