# api/v1settingsController.go
@@ -6,9 +6,12 @@ func v1settingsController(v1router *gin.RouterGroup) {
 	settings := v1router.Group("/settings")
 	settings.GET("/", GetAllOptions)
 	settings.POST("/", NewOption)
-    settings.GET("/:serviceName", GetOptions)
-    settings.GET("/:serviceName/:path", GetConcreteOption)
+    
+	settings.GET("/:serviceName", GetOptions)
 	settings.DELETE("/:serviceName", RemoveOptions)
 	settings.PUT("/:serviceName", ReplaceOptions)
 	settings.PATCH("/:serviceName", UpdateOption)
+
+    settings.GET("/:serviceName/:path", GetConcreteOption)
+	settings.DELETE("/:serviceName/:path", DeleteConcreteOption)
 }
